force-app/main/default/objects/Opportunity/fields/Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Age__c</fullName>
    <formula>year( TODAY() )- YEAR(Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>