force-app/main/default/objects/Opportunity/fields/Applicant_Score__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Score__c</fullName>
    <formula>IF(Total_Questions__c &gt; 0, Total_Score__c /Total_Questions__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>