force-app/main/default/objects/Opportunity/fields/Applicant_Score_Rating__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Score_Rating__c</fullName>
    <formula>IMAGE(
  IF(Applicant_Score__c &gt;=4, &quot;/img/samples/stars_500.gif&quot;,
    IF(Applicant_Score__c &gt;=3, &quot;/img/samples/stars_400.gif&quot;,
      IF(Applicant_Score__c &gt;=2, &quot;/img/samples/stars_300.gif&quot;,
        IF(Applicant_Score__c &gt;=1, &quot;/img/samples/stars_200.gif&quot;,
          IF(Applicant_Score__c &gt;=0, &quot;/img/samples/stars_100.gif&quot;,&quot;/img/samples/stars_000.gif&quot;)
        )
      )
    )
  ), &quot;Applicant Score&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Score Rating</label>
    <type>Text</type>
</CustomField>