force-app/main/default/objects/Opportunity/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>