force-app/main/default/objects/Opportunity/fields/Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status__c</fullName>
    <formula>IMAGE( 
  CASE(  TEXT(Background_Check__c), 
   &quot;Pass&quot;, &quot;/img/samples/flag_green.gif&quot;,
   &quot;Fail&quot;, &quot;/img/samples/flag_red.gif&quot;, 
   &quot;/s.gif&quot;), 
&quot;Background Check Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Status</label>
    <type>Text</type>
</CustomField>