force-app/main/default/objects/Opportunity/fields/Drug_Test__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test__c</fullName>
    <label>Drug Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>