force-app/main/default/objects/Opportunity/fields/Education_Level_New__c.field-meta.xml
<CustomField>
    <fullName>Education_Level_New__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education_Level_New</valueSetName>
    </valueSet>
</CustomField>