force-app/main/default/objects/Opportunity/fields/Fitness_Test__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Test__c</fullName>
    <label>Fitness Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>