force-app/main/default/objects/Opportunity/fields/Fitness_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Test_Status__c</fullName>
    <formula>IMAGE( 
  CASE( TEXT( Fitness_Test__c ), 
    &quot;Pass&quot;, &quot;/img/samples/flag_green.gif&quot;,
    &quot;Fail&quot;, &quot;/img/samples/flag_red.gif&quot;, 
    &quot;/s.gif&quot;), 
&quot;Check Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fitness Test Status</label>
    <type>Text</type>
</CustomField>