force-app/main/default/objects/Opportunity/fields/Medical_Exam__c.field-meta.xml
<CustomField>
    <fullName>Medical_Exam__c</fullName>
    <label>Medical Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassFail</valueSetName>
    </valueSet>
</CustomField>