force-app/main/default/objects/Opportunity/fields/Process_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Process_Background_Check__c</fullName>
    <description>Start of background check</description>
    <label>Process Background Check</label>
    <type>Date</type>
</CustomField>