force-app/main/default/objects/Opportunity/fields/Process_Drug_Test__c.field-meta.xml
<CustomField>
    <fullName>Process_Drug_Test__c</fullName>
    <description>Start drug testing</description>
    <label>Process Drug Test</label>
    <type>Date</type>
</CustomField>