force-app/main/default/objects/Opportunity/fields/Process_EOD__c.field-meta.xml
<CustomField>
    <fullName>Process_EOD__c</fullName>
    <description>applicant is hired - closed</description>
    <label>Process EOD</label>
    <type>Date</type>
</CustomField>