force-app/main/default/objects/Opportunity/fields/Process_Extend_Offer__c.field-meta.xml
<CustomField>
    <fullName>Process_Extend_Offer__c</fullName>
    <description>Start offer entended</description>
    <label>Process Extend Offer</label>
    <type>Date</type>
</CustomField>