force-app/main/default/objects/Opportunity/fields/Process_Fitness_Test__c.field-meta.xml
<CustomField>
    <fullName>Process_Fitness_Test__c</fullName>
    <description>Start fitness test</description>
    <label>Process Fitness Test</label>
    <type>Date</type>
</CustomField>