force-app/main/default/objects/Opportunity/fields/Process_Interview__c.field-meta.xml
<CustomField>
    <fullName>Process_Interview__c</fullName>
    <description>Start interview process</description>
    <label>Process Interview</label>
    <type>Date</type>
</CustomField>