force-app/main/default/objects/Opportunity/fields/Process_Medical_Exam__c.field-meta.xml
<CustomField>
    <fullName>Process_Medical_Exam__c</fullName>
    <description>Start medical exam</description>
    <label>Process Medical Exam</label>
    <type>Date</type>
</CustomField>