force-app/main/default/objects/Opportunity/fields/Process_Polygraph_Test__c.field-meta.xml
<CustomField>
    <fullName>Process_Polygraph_Test__c</fullName>
    <description>Start polygrpah test</description>
    <label>Process Polygraph Test</label>
    <type>Date</type>
</CustomField>