force-app/main/default/objects/Opportunity/fields/Process_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Review_Date__c</fullName>
    <description>Date for review to begin</description>
    <label>Process Review Date</label>
    <type>Date</type>
</CustomField>