force-app/main/default/objects/Opportunity/fields/Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Start_Date__c</fullName>
    <description>Hidden date field for each stage in employee process</description>
    <label>Process Start Date</label>
    <type>Date</type>
</CustomField>