force-app/main/default/objects/Opportunity/fields/Process_Time_to_EOD__c.field-meta.xml
<CustomField>
    <fullName>Process_Time_to_EOD__c</fullName>
    <formula>IF(BLANKVALUE(    Process_EOD__c       , NULL) == NULL, NULL, Process_EOD__c  - Process_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Time to EOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>