force-app/main/default/objects/Opportunity/fields/Process_Time_to_Fitness__c.field-meta.xml
<CustomField>
    <fullName>Process_Time_to_Fitness__c</fullName>
    <formula>IF(BLANKVALUE(  Process_Fitness_Test__c  , NULL) == NULL, NULL, Process_Fitness_Test__c  - Process_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Time to Fitness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>