force-app/main/default/objects/Opportunity/fields/Process_Time_to_Interview__c.field-meta.xml
<CustomField>
    <fullName>Process_Time_to_Interview__c</fullName>
    <formula>IF(BLANKVALUE(  Process_Interview__c   , NULL) == NULL, NULL, Process_Interview__c  - Process_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Time to Interview</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>