force-app/main/default/objects/Opportunity/fields/Process_Time_to_Offer__c.field-meta.xml
<CustomField>
    <fullName>Process_Time_to_Offer__c</fullName>
    <formula>IF(BLANKVALUE(    Process_Extend_Offer__c      , NULL) == NULL, NULL, Process_Extend_Offer__c  - Process_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Time to Offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>