force-app/main/default/objects/Opportunity/fields/Process_Time_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Process_Time_to_Review__c</fullName>
    <formula>IF(BLANKVALUE(Process_Review_Date__c, NULL) == NULL, NULL, Process_Review_Date__c -  Process_Start_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Time to Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>