force-app/main/default/objects/Opportunity/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <description>Total number of questions asked</description>
    <label>Total Questions</label>
    <summarizedField>Interview__c.Number_of_Questions__c</summarizedField>
    <summaryForeignKey>Interview__c.Applicantion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>