force-app/main/default/objects/Opportunity/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>total individual scores</description>
    <label>Total Score</label>
    <summarizedField>Interview__c.Total_Score__c</summarizedField>
    <summaryForeignKey>Interview__c.Applicantion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>