force-app/main/default/objects/Opportunity/fields/US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen__c</fullName>
    <label>US Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Born</fullName>
            </value>
            <value>
                <fullName>Naturalized</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>