force-app/main/default/objects/Opportunity/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <label>Veteran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Veteran</valueSetName>
    </valueSet>
</CustomField>